--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,42 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
-    "@mui/x-data-grid": "^7.11.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "bootstrap": "^5.3.1",
-    "moment": "^2.30.1",
-    "mui-one-time-password-input": "^5.0.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-input-mask": "^2.0.4",
-    "react-number-format": "^5.4.4",
-    "react-redux": "^8.1.2",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.16.0",
-    "react-select": "^5.10.1",
-    "react-toastify": "^9.1.3",
-    "recharts": "^2.15.4",
-    "sass": "^1.67.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.1.2"
   }
 }
